erDiagram
    UTILISATEURS ||--o{ UTILISATEURS : "proprietaire_id (boutique)"
    UTILISATEURS ||--o{ CATEGORIES : "possède"
    UTILISATEURS ||--o{ MARQUES : "possède"
    UTILISATEURS ||--o{ UNITES : "possède"
    UTILISATEURS ||--o{ DEVISES : "possède"
    UTILISATEURS ||--o{ TAXES : "possède"
    UTILISATEURS ||--o{ TYPES_PAIEMENT : "possède"
    UTILISATEURS ||--o{ FOURNISSEURS : "possède"
    UTILISATEURS ||--o{ MATERIELS : "possède"

    CATEGORIES ||--o{ MATERIELS : "classe"
    MARQUES ||--o{ MATERIELS : "marque"
    UNITES ||--o{ MATERIELS : "unité"
    DEVISES ||--o{ MATERIELS : "devise"

    UTILISATEURS ||--o{ LOCATIONS : "client"
    UTILISATEURS ||--o{ LOCATIONS : "employé"
    LOCATIONS ||--o{ LIGNES_LOCATION : "lignes"
    MATERIELS ||--o{ LIGNES_LOCATION : "matériel"
    LOCATIONS ||--o| CONTRATS : "contrat"
    LOCATIONS ||--o{ PAIEMENTS : "paiements"
    TYPES_PAIEMENT ||--o{ PAIEMENTS : "mode"

    FOURNISSEURS ||--o{ ACHATS : "fournit"
    ACHATS ||--o{ LIGNES_ACHAT : "lignes"
    MATERIELS ||--o{ LIGNES_ACHAT : "matériel"
    ACHATS ||--o{ PAIEMENTS_ACHAT : "règlements"
    TYPES_PAIEMENT ||--o{ PAIEMENTS_ACHAT : "mode"

    UTILISATEURS ||--o{ VENTES : "client"
    VENTES ||--o{ LIGNES_VENTE : "lignes"
    MATERIELS ||--o{ LIGNES_VENTE : "matériel"
    VENTES ||--o{ PAIEMENTS_VENTE : "encaissements"
    TYPES_PAIEMENT ||--o{ PAIEMENTS_VENTE : "mode"

    MATERIELS ||--o{ AJUSTEMENTS_STOCK : "ajuste"
    UTILISATEURS ||--o{ AJUSTEMENTS_STOCK : "auteur"

    FOURNISSEURS ||--o{ DEPENSES : "lié"
    TYPES_PAIEMENT ||--o{ DEPENSES : "mode"
    UTILISATEURS ||--o{ DEPENSES : "saisie"

    UTILISATEURS {
        bigint id PK
        string nom
        string email UK
        string password
        enum role "admin|manager|employee|client"
        bigint proprietaire_id FK "boutique (nullable)"
        string telephone
        enum statut "active|inactive"
        json permissions
    }
    CATEGORIES {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        text description
    }
    MARQUES {
        bigint id PK
        bigint proprietaire_id FK
        string nom
    }
    UNITES {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        string symbole
    }
    DEVISES {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        string code "ex: MAD"
        string symbole "ex: DH"
        decimal taux_change
        bool par_defaut
    }
    TAXES {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        decimal taux "%"
        bool par_defaut
    }
    TYPES_PAIEMENT {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        bool actif
    }
    FOURNISSEURS {
        bigint id PK
        bigint proprietaire_id FK
        string nom
        string telephone
        string email
        string adresse
    }
    MATERIELS {
        bigint id PK
        bigint proprietaire_id FK
        bigint categorie_id FK
        bigint marque_id FK
        bigint unite_id FK
        bigint devise_id FK
        string nom
        text description
        decimal prix_par_jour
        int quantite "capacité"
        int jours_tampon "battement"
        enum statut "available|maintenance|inactive"
        string image
    }
    LOCATIONS {
        bigint id PK
        bigint proprietaire_id FK
        bigint utilisateur_id FK "client"
        bigint employe_id FK
        date date_debut
        date date_fin
        date date_retour
        enum statut "pending|confirmed|ongoing|returned|cancelled"
        decimal sous_total "HT"
        decimal taux_taxe
        decimal montant_taxe
        decimal montant_total "TTC"
    }
    LIGNES_LOCATION {
        bigint id PK
        bigint location_id FK
        bigint materiel_id FK
        int quantite
        decimal prix_unitaire
        decimal sous_total
    }
    CONTRATS {
        bigint id PK
        bigint location_id FK
        string numero_contrat UK
        string chemin_pdf
        timestamp date_generation
    }
    PAIEMENTS {
        bigint id PK
        bigint location_id FK
        bigint type_paiement_id FK
        bigint utilisateur_id FK
        decimal montant
        date date_paiement
        string note
    }
    ACHATS {
        bigint id PK
        bigint proprietaire_id FK
        bigint fournisseur_id FK
        bigint utilisateur_id FK
        string reference
        date date_achat
        enum statut "pending|received"
        decimal montant_total
    }
    LIGNES_ACHAT {
        bigint id PK
        bigint achat_id FK
        bigint materiel_id FK
        int quantite
        decimal cout_unitaire
        decimal sous_total
    }
    PAIEMENTS_ACHAT {
        bigint id PK
        bigint achat_id FK
        bigint type_paiement_id FK
        bigint utilisateur_id FK
        decimal montant
        date date_paiement
    }
    VENTES {
        bigint id PK
        bigint proprietaire_id FK
        bigint client_id FK
        bigint utilisateur_id FK
        string reference
        date date_vente
        decimal sous_total "HT"
        decimal taux_taxe
        decimal montant_taxe
        decimal montant_total "TTC"
    }
    LIGNES_VENTE {
        bigint id PK
        bigint vente_id FK
        bigint materiel_id FK
        int quantite
        decimal prix_unitaire
        decimal sous_total
    }
    PAIEMENTS_VENTE {
        bigint id PK
        bigint vente_id FK
        bigint type_paiement_id FK
        bigint utilisateur_id FK
        decimal montant
        date date_paiement
    }
    AJUSTEMENTS_STOCK {
        bigint id PK
        bigint proprietaire_id FK
        bigint materiel_id FK
        bigint utilisateur_id FK
        enum type "in|out"
        int quantite
        int quantite_avant
        int quantite_apres
        decimal valeur_unitaire
        decimal valeur_totale
        string motif
    }
    DEPENSES {
        bigint id PK
        bigint proprietaire_id FK
        bigint fournisseur_id FK
        bigint type_paiement_id FK
        bigint utilisateur_id FK
        string categorie
        string libelle
        decimal montant
        date date_depense
    }
